adding a payment calculator that uses a basic brute force search algorithm to find a payment scheme that works.

--- a/java-vending-machine-demo/build.gradle
+++ b/java-vending-machine-demo/build.gradle
@@ -10,6 +10,9 @@ startScripts {
 }
 
 dependencies {
+    compile(
+        project(':java-vending-machine-core')
+    )
     runtime(
         [group: 'ch.qos.logback', name: 'logback-classic',  version: project.logbackVersion],
     )
